--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,24 @@
-.App {
-  text-align: center;
+.social-icon i {
+	font-size: 30px;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+a:not(.social-icon) {
+	color: inherit !important;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+a.nav-link {
+	color: white !important;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.pokemon-item {
+	cursor: pointer;
 }
-
-.App-link {
-  color: #61dafb;
+.pokemon-item:hover,
+.pokemon-item:active {
+	background-color: rgba(41, 139, 16, 0.3);
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.btn-pag {
+	width: 125px !important;
+}
+@media (max-width: 300px) {
+	.current-img {
+		width: 150px !important;
+	}
 }
